--- a/src/view/apptMain.fxml
+++ b/src/view/apptMain.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="appointmentMain" prefHeight="582.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AppointmentMainController">
+<AnchorPane id="AnchorPane" fx:id="appointmentMain" prefHeight="582.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AppointmentMainController">
    <children>
       <Label layoutX="262.0" layoutY="14.0" text="Appointments Overview">
          <font>
@@ -61,15 +61,15 @@
           </Tab>
         </tabs>
       </TabPane>
-      <TableView fx:id="customerTable" layoutX="4.0" layoutY="68.0" onMouseClicked="#handleCustomerClick" prefHeight="443.0" prefWidth="225.0">
+      <TableView fx:id="customerTable" layoutX="4.0" layoutY="68.0"  prefHeight="443.0" prefWidth="225.0">
         <columns>
           <TableColumn fx:id="customerId" prefWidth="64.0" text="ID" />
           <TableColumn fx:id="customerName" prefWidth="155.0" text="Customer" />
         </columns>
       </TableView>
-      <Button layoutX="230.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleAddButton" text="Add New Appointment" />
-      <Button layoutX="440.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleModifyButton" text="Modify Appointment" />
-      <Button layoutX="660.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleDeleteButton" text="Delete Appointment" />
-      <Button layoutX="40.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleBackButton" text="Return to Main Menu" />
+      <Button layoutX="230.0" layoutY="535.0" mnemonicParsing="false"  text="Add New Appointment" />
+      <Button layoutX="440.0" layoutY="535.0" mnemonicParsing="false"  text="Modify Appointment" />
+      <Button layoutX="660.0" layoutY="535.0" mnemonicParsing="false"  text="Delete Appointment" />
+      <Button layoutX="40.0" layoutY="535.0" mnemonicParsing="false"  text="Return to Main Menu" />
    </children>
 </AnchorPane>
